cloud-build/prod/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: main-web-lb-service
spec:
  type: LoadBalancer
  selector:
    app: main-web
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main-web
  template:
    metadata:
      labels:
        app: main-web
    spec:
      containers:
      - name:  main-web-application
        image: asia.gcr.io/travlytix/main-web:edbb1461-442b-40b5-87da-2101e79bb15b
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
